--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,3 @@
 [build]
-  base = "client"
-  publish = "../dist/public"
   command = "npm run build"
-
-[dev]
-  framework = "vite"
+  publish = "dist/public"
